[gd_scene load_steps=7 format=3 uid="uid://nfudh04fqg0d"]

[ext_resource type="Script" uid="uid://p8qjhndkjhti" path="res://scenes/doctor/doctor.gd" id="1_ll7ka"]
[ext_resource type="Texture2D" uid="uid://nle47064vxw8" path="res://textures/temp/clipboard-isolated-on-transparent-background-free-png.webp" id="3_44hvh"]
[ext_resource type="Script" uid="uid://dxaqadg0f4qv6" path="res://resources/ui/inventory_button.gd" id="3_ow3c1"]
[ext_resource type="PackedScene" uid="uid://dm5epu2jyx6vk" path="res://scenes/booklet/booklet.tscn" id="4_44hvh"]
[ext_resource type="PackedScene" uid="uid://c1x1k5io21d8x" path="res://scenes/patient/patient_ui.tscn" id="4_m8bar"]
[ext_resource type="PackedScene" uid="uid://b138877gqmwf8" path="res://dialogue/dialogue.tscn" id="6_4xleg"]

[node name="Doctor" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_ll7ka")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -76.0
offset_top = -20.0
grow_horizontal = 0
grow_vertical = 0

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 6
theme_override_constants/margin_top = 6
theme_override_constants/margin_right = 6
theme_override_constants/margin_bottom = 6

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 6

[node name="Inv1" type="Button" parent="PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
icon_alignment = 1
expand_icon = true
script = ExtResource("3_ow3c1")
metadata/_custom_type_script = "uid://dxaqadg0f4qv6"

[node name="Inv2" type="Button" parent="PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
icon_alignment = 1
expand_icon = true
script = ExtResource("3_ow3c1")
metadata/_custom_type_script = "uid://dxaqadg0f4qv6"

[node name="Inv3" type="Button" parent="PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
icon_alignment = 1
expand_icon = true
script = ExtResource("3_ow3c1")
metadata/_custom_type_script = "uid://dxaqadg0f4qv6"

[node name="Inv4" type="Button" parent="PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
icon_alignment = 1
expand_icon = true
script = ExtResource("3_ow3c1")
metadata/_custom_type_script = "uid://dxaqadg0f4qv6"

[node name="Inv5" type="Button" parent="PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
icon_alignment = 1
expand_icon = true
script = ExtResource("3_ow3c1")
metadata/_custom_type_script = "uid://dxaqadg0f4qv6"

[node name="ClipboardButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -208.0
offset_right = 499.0
offset_bottom = 205.0
grow_vertical = 0
icon = ExtResource("3_44hvh")
flat = true
icon_alignment = 1
vertical_icon_alignment = 0
expand_icon = true

[node name="PatientUI" parent="." instance=ExtResource("4_m8bar")]
layout_mode = 1

[node name="Booklet" parent="." instance=ExtResource("4_44hvh")]
visible = false
layout_mode = 1
mouse_filter = 2

[node name="ReturnButton" type="Button" parent="."]
layout_mode = 0
offset_right = 173.0
offset_bottom = 91.0
text = "Back to Entrance"

[node name="Dialogue" parent="." instance=ExtResource("6_4xleg")]
visible = false
layout_mode = 1

[node name="KickOutButton" type="Button" parent="."]
visible = false
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -174.0
offset_bottom = 92.0
grow_horizontal = 0
text = "Kick Out Patient"
